--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </form>
       <div id="qrcode" class="text-center mt-4"></div>
     </div>
-    <a href="scan.html" class="btn btn-success"></a>
+    <a href="scan.html" class="btn btn-success">Registration</a>
   </div>
   <script src="js/register.js"></script>
 </body>
