--- a/index.html
+++ b/index.html
@@ -2,36 +2,86 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Register | Event</title>
+  <title>🎫 Event Registration</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(to right, #1ab79d, #0e6d5d);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
+    .card {
+      border: none;
+      border-radius: 20px;
+      padding: 2rem;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
+      background-color: #ffffff;
+    }
 
+    h2 {
+      font-weight: 600;
+      color: #1ab79d;
+    }
+
+    label {
+      font-weight: 500;
+      color: #444;
+    }
+
+    .btn-primary {
+      background: #1ab79d;
+      border: none;
+      border-radius: 12px;
+      font-weight: 600;
+    }
+
+    #qrcode canvas {
+      margin-top: 1rem;
+      border: 2px dashed #1ab79d;
+      padding: 1rem;
+      border-radius: 12px;
+      background: #f8f9fa;
+    }
+  </style>
 </head>
-<body class="bg-light">
-  <div class="container mt-5">
-    <div class="card p-4 shadow-lg">
-      <h2 class="text-center mb-4">🎉 Event Registration</h2>
-      <form id="registerForm">
-        <div class="mb-3">
-          <label for="name" class="form-label">Full Name</label>
-          <input type="text" class="form-control" id="name" required>
+<body>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card text-center">
+          <h2 class="mb-4">🎉 Register for the Mega Event</h2>
+          <form id="registerForm" class="text-start">
+            <div class="mb-3">
+              <label for="name" class="form-label">Full Name</label>
+              <input type="text" class="form-control" id="name" placeholder="e.g. John Doe" required>
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="email" placeholder="e.g. john@example.com" required>
+            </div>
+            <div class="mb-3">
+              <label for="phone" class="form-label">Phone</label>
+              <input type="text" class="form-control" id="phone" placeholder="e.g. 9876543210" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Register & Generate QR</button>
+          </form>
+          <div id="qrcode" class="mt-4"></div>
+
+          <br>
+
+          <a href="scan.html" class="btn btn-success">Scanner</a>
         </div>
-        <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email" required>
-        </div>
-        <div class="mb-3">
-          <label for="phone" class="form-label">Phone</label>
-          <input type="text" class="form-control" id="phone" required>
-        </div>
-        <button type="submit" class="btn btn-primary w-100">Register & Generate QR</button>
-      </form>
-      <div id="qrcode" class="text-center mt-4"></div>
+      </div>
     </div>
-    <a href="scan.html" class="btn btn-success">Registration</a>
   </div>
   <script src="js/register.js"></script>
 </body>
