--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container-fluid">
     <div class="row flex-column flex-md-row">
       <nav class="col-md-3 bg-dark text-white p-4 sidebar">
-        <h5 class="mb-4">📋 Dashboard Options</h5>
+        <h5 class="mb-4">📋BB Meet Dashboard Options</h5>
         <button class="btn btn-outline-light w-100 mb-2 scan-btn" data-type="entry">Entry Scan</button>
         <button class="btn btn-outline-light w-100 mb-2 scan-btn" data-type="food">Food Scan</button>
         <button class="btn btn-outline-light w-100 mb-3 scan-btn" data-type="gift">Gift Scan</button>
