--- a/index.html
+++ b/index.html
@@ -3,57 +3,76 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BB Meet QR Scanner & Member Dashboard</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css/style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.1/build/qrcode.min.js"></script>
-  <script src="https://unpkg.com/html5-qrcode"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <title>BB Meet | QR Scanner Portal</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+  <style>
+    body {
+      background: linear-gradient(to right, #f7f7f7, #e0f7ff);
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    .dashboard-box {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      transition: 0.3s;
+    }
+
+    .dashboard-box:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.15);
+    }
+
+    .dashboard-icon {
+      font-size: 2rem;
+      margin-bottom: 10px;
+    }
+
+    @media (max-width: 576px) {
+      .dashboard-box h5 {
+        font-size: 1rem;
+      }
+    }
+  </style>
 </head>
 <body>
-  <div class="container-fluid">
-    <div class="row flex-column flex-md-row">
-      <nav class="col-md-3 bg-dark text-white p-4 sidebar">
-        <h5 class="mb-4">📋BB Meet Dashboard Options</h5>
-        <button class="btn btn-outline-light w-100 mb-2 scan-btn" data-type="entry">Entry Scan</button>
-        <button class="btn btn-outline-light w-100 mb-2 scan-btn" data-type="food">Food Scan</button>
-        <button class="btn btn-outline-light w-100 mb-3 scan-btn" data-type="gift">Gift Scan</button>
+  <div class="container py-5">
+    <h2 class="text-center mb-4 fw-bold text-primary">📋 BB Meet | QR Scanner Portal</h2>
 
-        <input type="file" id="excelFile" class="form-control mb-2" />
-        <button class="btn btn-success w-100 mb-2" onclick="uploadExcel()">📥 Upload Excel</button>
-        <button class="btn btn-info w-100" onclick="exportToExcel()">📤 Export to Excel</button>
-      </nav>
-
-      <main class="col-md-9 p-4">
-        <h2 class="mb-3 text-center text-md-start">🧾 Current Mode: <span id="currentMode">Entry</span></h2>
-
-        <div class="d-flex justify-content-center mb-4">
-          <div id="qr-reader" style="width: 300px;"></div>
-        </div>
-
-        <input type="text" id="searchInput" class="form-control mb-3" placeholder="🔍 Search Name..." />
-
-        <div class="table-responsive">
-          <table class="table table-bordered table-hover table-striped">
-            <thead class="table-dark">
-              <tr>
-                <th>#</th>
-                <th>Name</th>
-                <th>QR Code</th>
-                <th>Download</th>
-                <th>Entry</th>
-                <th>Food</th>
-                <th>Gift</th>
-              </tr>
-            </thead>
-            <tbody id="tableBody"></tbody>
-          </table>
-        </div>
-      </main>
+    <div class="row g-4 justify-content-center">
+      <div class="col-6 col-md-3">
+        <a href="candidate.html" class="text-decoration-none text-dark">
+          <div class="dashboard-box text-center p-4">
+            <div class="dashboard-icon">👤</div>
+            <h5>Candidate Details</h5>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-3">
+        <a href="entry.html" class="text-decoration-none text-dark">
+          <div class="dashboard-box text-center p-4">
+            <div class="dashboard-icon">🚪</div>
+            <h5>Entry Scanner</h5>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-3">
+        <a href="food.html" class="text-decoration-none text-dark">
+          <div class="dashboard-box text-center p-4">
+            <div class="dashboard-icon">🍱</div>
+            <h5>Food Scanner</h5>
+          </div>
+        </a>
+      </div>
+      <div class="col-6 col-md-3">
+        <a href="gift.html" class="text-decoration-none text-dark">
+          <div class="dashboard-box text-center p-4">
+            <div class="dashboard-icon">🎁</div>
+            <h5>Gift Scanner</h5>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
-
-  <script src="js/scan.js"></script>
 </body>
 </html>
