--- a/gift.html
+++ b/gift.html
@@ -51,6 +51,13 @@
 </head>
 <body>
   <div class="container py-4">
+
+    <!-- 🔙 Back button -->
+  <div class="text-center mb-3">
+    <a href="index.html" class="btn btn-outline-primary">🏠 Back to Main Dashboard</a>
+  </div>
+
+  
     <div class="text-center mb-4">
       <h2 class="scan-title">🎁 SCAN MODE: <span id="scanModeTitle">GIFT</span></h2>
     </div>
