--- a/candidate.html
+++ b/candidate.html
@@ -12,6 +12,12 @@
 </head>
 <body>
   <div class="container py-5">
+
+     <!-- 🔙 Back button -->
+  <div class="text-center mb-3">
+    <a href="index.html" class="btn btn-outline-primary">🏠 Back to Main Dashboard</a>
+  </div>
+  
     <h2 class="text-center mb-4">👤 Candidate List</h2>
 
     <div class="row mb-4">
