--- a/entry.html
+++ b/entry.html
@@ -10,7 +10,7 @@
   <script src="https://unpkg.com/html5-qrcode"></script>
   <style>
     body {
-      background: linear-gradient(to right, #fdfbfb, #ebedee);
+      background: linear-gradient(to right, #e0f7fa, #ffffff);
       font-family: 'Segoe UI', sans-serif;
     }
 
@@ -56,7 +56,7 @@
   <div class="text-center mb-3">
     <a href="index.html" class="btn btn-outline-primary">🏠 Back to Main Dashboard</a>
   </div>
-  
+
     <div class="text-center mb-4">
       <h2 class="scan-title">🔍 SCAN MODE: <span id="scanModeTitle">ENTRY</span></h2>
     </div>
