--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     body {
       background: linear-gradient(to right, #f7f7f7, #e0f7ff);
       font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    .container {
+      flex: 1;
     }
 
     .dashboard-box {
@@ -28,15 +35,57 @@
       margin-bottom: 10px;
     }
 
+    .footer {
+      text-align: center;
+      padding: 15px 10px;
+      font-size: 0.9rem;
+      color: #555;
+    }
+
+    .footer a {
+      text-decoration: none;
+      color: #007bff;
+      font-weight: 500;
+    }
+
+    .footer a:hover {
+      text-decoration: underline;
+    }
+
+    .logo-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 30px 0;
+    }
+
+    .logo-header img {
+      height: 100%;
+      max-width: 200px;
+      object-fit: contain;
+    }
+
     @media (max-width: 576px) {
       .dashboard-box h5 {
         font-size: 1rem;
+      }
+      .logo-header {
+        flex-direction: column;
+        gap: 10px;
       }
     }
   </style>
 </head>
 <body>
-  <div class="container py-5">
+
+  <!-- 🔰 Top Logos -->
+  <div class="logo-header">
+    <img src="images/logo-left.png" alt="Left Logo" />
+    <img src="img/logo.png" alt="Right Logo" />
+  </div>
+
+  <!-- 📋 Title & Boxes -->
+  <div class="container py-4">
     <h2 class="text-center mb-4 fw-bold text-primary">📋 BB Meet | QR Scanner Portal</h2>
 
     <div class="row g-4 justify-content-center">
@@ -73,6 +122,11 @@
         </a>
       </div>
     </div>
+  </div>
+
+  <!-- 🌐 Footer -->
+  <div class="footer mt-auto">
+    Powered by <a href="https://urbancode.in" target="_blank">Urbancode Edutech Solutions Private Limited</a>
   </div>
 </body>
 </html>
