--- a/preview.html
+++ b/preview.html
@@ -12,38 +12,83 @@
       background: linear-gradient(to right, #fdfbfb, #ebedee);
       font-family: 'Segoe UI', sans-serif;
     }
+
+    .header-logos {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 30px;
+    }
+
+    .header-logos img {
+      height: 50px;
+      object-fit: contain;
+    }
+
     .preview-container {
       max-width: 500px;
-      margin: 60px auto;
+      margin: 20px auto 40px;
       background: #ffffff;
       padding: 30px;
       border-radius: 12px;
       box-shadow: 0 0 12px rgba(0, 0, 0, 0.08);
       text-align: center;
     }
+
     .qr-name {
       font-size: 1.5rem;
       font-weight: 600;
       margin-bottom: 20px;
     }
+
     canvas {
       margin-bottom: 20px;
     }
+
     #downloadBtn {
       font-size: 16px;
       padding: 8px 20px;
     }
+
+    .powered-by {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #666;
+      margin-bottom: 20px;
+    }
+
+    .powered-by a {
+      color: #0d6efd;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .powered-by a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
+
+  <!-- 🔰 Header with brand logos -->
+  <div class="header-logos">
+    <img src="images/logo-left.png" alt="Left Logo" />
+    <img src="img/logo.png" alt="Right Logo" />
+  </div>
+
+  <!-- 🔳 QR Code Box -->
   <div class="preview-container">
     <div class="qr-name" id="qrName">Loading...</div>
     <canvas id="qrCanvas"></canvas>
-    <button id="downloadBtn" class="btn btn-primary">⬇️ Download QR Code</button>
+    <button id="downloadBtn" class="btn btn-success">⬇️ Download QR Code</button>
+  </div>
+
+  <!-- 💼 Footer -->
+  <div class="powered-by">
+    Powered by <a href="https://urbancode.in" target="_blank">Urbancode Edutech Solutions Private Limited</a>
   </div>
 
   <script>
-    // Get 'name' from query params
     function getQueryParam(param) {
       const urlParams = new URLSearchParams(window.location.search);
       return urlParams.get(param);
