--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     }
 
     .logo-header img {
-      height: 100%;
+      height: 100px;
       max-width: 200px;
       object-fit: contain;
     }
@@ -80,7 +80,7 @@
 
   <!-- 🔰 Top Logos -->
   <div class="logo-header">
-    <img src="images/logo-left.png" alt="Left Logo" />
+    <img src="img/bb.jpg" alt="Left Logo" />
     <img src="img/logo.png" alt="Right Logo" />
   </div>
 
