--- a/preview.html
+++ b/preview.html
@@ -72,7 +72,7 @@
 
   <!-- 🔰 Header with brand logos -->
   <div class="header-logos">
-    <img src="images/logo-left.png" alt="Left Logo" />
+    <img src="img/bb.jpg" alt="Left Logo" />
     <img src="img/logo.png" alt="Right Logo" />
   </div>
 
