--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
   <!-- 🌐 Footer -->
   <div class="footer mt-auto">
-    Powered by <a href="https://urbancode.in" target="_blank">Urbancode Edutech Solutions Private Limited</a>
+    Powered by <a href="https://urbancode.in" target="_blank">Urbancode</a>
   </div>
 </body>
 </html>
