--- a/gift.html
+++ b/gift.html
@@ -126,35 +126,49 @@
     }
   
     const alreadyWarned = new Set();
+let scanCooldown = false;
 
-    function onScanSuccess(decodedText) {
+function onScanSuccess(decodedText) {
   if (scanCooldown) return;
-
-  scanCooldown = true;
-  setTimeout(() => {
-    scanCooldown = false;
-  }, 5000); // 5 seconds cooldown
 
   const found = members.find(m => m.name === decodedText.trim());
 
   if (!found) {
-    Swal.fire("Error", "Name not found in Excel list", "error");
-    return;
+    return Swal.fire("Error", "Name not found in Excel list", "error");
   }
 
   if (found.scan?.[scanMode]) {
     if (!alreadyWarned.has(found.name)) {
       alreadyWarned.add(found.name);
       Swal.fire("Already Scanned", `${scanMode.toUpperCase()} already marked for ${found.name}`, "info");
+
+      // Remove from warning set after delay so it shows again next time
+      setTimeout(() => {
+        alreadyWarned.delete(found.name);
+      }, 5000);
+
+      return;
     }
-    return;
+    return; // silently ignore repeat alerts
   }
 
   found.scan[scanMode] = true;
   localStorage.setItem("members", JSON.stringify(members));
-
-  Swal.fire("Success", `${scanMode.toUpperCase()} marked for ${found.name}`, "success");
   renderScanTable();
+
+  scanCooldown = true;
+
+  Swal.fire({
+    icon: "success",
+    title: "Scan Successful",
+    text: `${scanMode.toUpperCase()} marked for ${found.name}`,
+    timer: 2000,
+    showConfirmButton: false
+  });
+
+  setTimeout(() => {
+    scanCooldown = false;
+  }, 5000); // allow re-scan after 5 seconds
 }
 
 
