--- a/preview.html
+++ b/preview.html
@@ -10,7 +10,7 @@
   <style>
     body {
       margin: 0;
-      background: url('img/meet.jpg') no-repeat center center fixed;
+      background: url('img/meetup.jpg') no-repeat center center fixed;
       background-size: cover;
       font-family: 'Segoe UI', sans-serif;
       color: #fff3b0;
