--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BB Meet | QR Scanner Portal</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
       background: linear-gradient(to right, #f7f7f7, #e0f7ff);
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Roboto', sans-serif;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
@@ -18,16 +19,23 @@
       flex: 1;
     }
 
+    .navbar {
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
     .dashboard-box {
       background: white;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      transition: 0.3s;
+      transition: 0.3s ease;
+      cursor: pointer;
+      animation: fadeInUp 0.6s ease-in-out;
     }
 
     .dashboard-box:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 6px 18px rgba(0,0,0,0.15);
+      transform: translateY(-6px);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.2);
+      background-color: #f9fdff;
     }
 
     .dashboard-icon {
@@ -40,6 +48,7 @@
       padding: 15px 10px;
       font-size: 0.9rem;
       color: #555;
+      background-color: #f8f9fa;
     }
 
     .footer a {
@@ -72,11 +81,41 @@
       .logo-header {
         flex-direction: column;
         gap: 10px;
+        text-align: center;
+      }
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
       }
     }
   </style>
 </head>
 <body>
+
+  <!-- 🔝 Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
+    <div class="container-fluid px-4">
+      <a class="navbar-brand fw-bold text-primary" href="#">BB Meet</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="candidate.html">Candidate</a></li>
+          <li class="nav-item"><a class="nav-link" href="entry.html">Entry</a></li>
+          <li class="nav-item"><a class="nav-link" href="food.html">Food</a></li>
+          <li class="nav-item"><a class="nav-link" href="gift.html">Gift</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <!-- 🔰 Top Logos -->
   <div class="logo-header">
@@ -90,7 +129,7 @@
 
     <div class="row g-4 justify-content-center">
       <div class="col-6 col-md-3">
-        <a href="candidate.html" class="text-decoration-none text-dark">
+        <a href="candidate.html" class="text-decoration-none text-dark" data-bs-toggle="tooltip" title="View candidate details">
           <div class="dashboard-box text-center p-4">
             <div class="dashboard-icon">👤</div>
             <h5>Candidate Details</h5>
@@ -98,7 +137,7 @@
         </a>
       </div>
       <div class="col-6 col-md-3">
-        <a href="entry.html" class="text-decoration-none text-dark">
+        <a href="entry.html" class="text-decoration-none text-dark" data-bs-toggle="tooltip" title="Scan entry QR">
           <div class="dashboard-box text-center p-4">
             <div class="dashboard-icon">🚪</div>
             <h5>Entry Scanner</h5>
@@ -106,7 +145,7 @@
         </a>
       </div>
       <div class="col-6 col-md-3">
-        <a href="food.html" class="text-decoration-none text-dark">
+        <a href="food.html" class="text-decoration-none text-dark" data-bs-toggle="tooltip" title="Scan food QR">
           <div class="dashboard-box text-center p-4">
             <div class="dashboard-icon">🍱</div>
             <h5>Food Scanner</h5>
@@ -114,7 +153,7 @@
         </a>
       </div>
       <div class="col-6 col-md-3">
-        <a href="gift.html" class="text-decoration-none text-dark">
+        <a href="gift.html" class="text-decoration-none text-dark" data-bs-toggle="tooltip" title="Scan gift QR">
           <div class="dashboard-box text-center p-4">
             <div class="dashboard-icon">🎁</div>
             <h5>Gift Scanner</h5>
@@ -126,7 +165,15 @@
 
   <!-- 🌐 Footer -->
   <div class="footer mt-auto">
-    Powered by <a href="https://urbancode.in" target="_blank">Urbancode</a>
+    Powered by <a href="https://urbancode.in" target="_blank">Urbancode Edutech Solutions Pvt Ltd</a>
   </div>
+
+  <!-- Bootstrap JS for tooltip functionality -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
+    [...tooltipTriggerList].map(el => new bootstrap.Tooltip(el));
+  </script>
+
 </body>
 </html>
