--- a/preview.html
+++ b/preview.html
@@ -161,7 +161,7 @@
   <img src="img/logo.png" alt="Urbancode Logo" class="urbancode-logo" />
 </div>
 
-<h2 class="welcome">🎉 Welcome to BB Meetup</h2>
+<h2 class="welcome">🎉 WELCOME TO BB GRAND MEET 2025 🎉</h2>
 
 
   <!-- 🔲 QR Card -->
